--- a/webhook-service/package.json
+++ b/webhook-service/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "billing-service",
+  "name": "webhook-service",
   "version": "1.0.0",
-  "description": "This is the billing services. ",
-  "main": "server.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Adnan Latif - 21642",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.10.3",
-    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2"
   }
 }
